modified query structure for category controller
